Enhance homepage layout and content

--- a/index.html
+++ b/index.html
@@ -12,16 +12,35 @@
     <header class="hero" id="top">
       <nav class="hero-nav">
         <span class="logo">Влал</span>
-        <a class="nav-link" href="https://github.com/vlalikoffc" target="_blank" rel="noreferrer">
-          GitHub
-        </a>
+        <div class="nav-links">
+          <a class="nav-link" href="#about">Обо мне</a>
+          <a class="nav-link" href="#projects">Проекты</a>
+          <a class="nav-link" href="https://github.com/vlalikoffc" target="_blank" rel="noreferrer">
+            GitHub
+          </a>
+        </div>
       </nav>
 
       <div class="hero-content">
         <p class="eyebrow">Персональная зона экспериментов</p>
         <h1>Я — Влал</h1>
-        <p class="subtitle">Мне нечего делать, поэтому мне интересно программировать.</p>
-        <p class="subtext">Экспериментирую, делаю странные и интересные вещи.</p>
+        <p class="subtitle">Создаю живые цифровые штуки и прототипы, которые двигаются и дышат.</p>
+        <p class="subtext">Исследую автоматизацию, ботов и интерфейсы, чтобы каждое взаимодействие выглядело чуть умнее.</p>
+
+        <div class="hero-metrics">
+          <div>
+            <span class="metric-value">3+</span>
+            <span class="metric-label">эксперимента в работе</span>
+          </div>
+          <div>
+            <span class="metric-value">24/7</span>
+            <span class="metric-label">любопытства</span>
+          </div>
+          <div>
+            <span class="metric-value">∞</span>
+            <span class="metric-label">идей на полке</span>
+          </div>
+        </div>
 
         <div class="hero-actions">
           <a class="btn primary" href="https://github.com/vlalikoffc" target="_blank" rel="noreferrer">
@@ -35,6 +54,38 @@
     </header>
 
     <main>
+      <section class="about" id="about">
+        <div class="section-header">
+          <h2>Что я делаю</h2>
+          <p>Собираю проекты, которые объединяют автоматизацию, данные и приятный визуал.</p>
+        </div>
+        <div class="about-grid">
+          <article class="about-card">
+            <h3>Интерактивные боты</h3>
+            <p>Слежу за статусами, уведомляю и превращаю рутину в поток событий.</p>
+          </article>
+          <article class="about-card">
+            <h3>Автоматизация</h3>
+            <p>Скрипты, которые берут на себя скучные шаги, чтобы оставить время на идеи.</p>
+          </article>
+          <article class="about-card">
+            <h3>Дизайн настроения</h3>
+            <p>Люблю настраивать атмосферу — свет, графика и микровзаимодействия.</p>
+          </article>
+        </div>
+
+        <div class="stack">
+          <span class="stack-title">Текущий стек</span>
+          <div class="stack-list">
+            <span>JavaScript</span>
+            <span>Node.js</span>
+            <span>Python</span>
+            <span>Telegram API</span>
+            <span>UI/UX</span>
+          </div>
+        </div>
+      </section>
+
       <section class="projects" id="projects">
         <div class="section-header">
           <h2>Проекты</h2>
@@ -87,6 +138,10 @@
 
     <footer class="site-footer">
       <span>Влал · GitHub Pages</span>
+      <div class="footer-links">
+        <a class="footer-link" href="#about">Обо мне</a>
+        <a class="footer-link" href="#projects">Проекты</a>
+      </div>
       <a href="https://github.com/vlalikoffc" target="_blank" rel="noreferrer" aria-label="GitHub">
         <svg viewBox="0 0 24 24" aria-hidden="true">
           <path
